--- a/dv/uvma_spi/ip.yml
+++ b/dv/uvma_spi/ip.yml
@@ -1,28 +1,20 @@
 ---
-## 
 ## Copyright 2021 Datum Technology Corporation
 ## SPDX-License-Identifier: Apache-2.0 WITH SHL-2.1
-## 
-## Licensed under the Solderpad Hardware License v 2.1 (the "License"); you may
-## not use this file except in compliance with the License, or, at your option,
-## the Apache License version 2.0. You may obtain a copy of the License at
-## 
-##     https://solderpad.org/licenses/SHL-2.1/
-## 
-## Unless required by applicable law or agreed to in writing, any work
-## distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-## WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-## License for the specific language governing permissions and limitations
-## under the License.
-## 
+## Licensed under the Solderpad Hardware License v 2.1 (the "License"); you may not use this file except in compliance
+## with the License, or, at your option, the Apache License version 2.0. You may obtain a copy of the License at
+##                                        https://solderpad.org/licenses/SHL-2.1/
+## Unless required by applicable law or agreed to in writing, any work distributed under the License is distributed on
+## an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
+## specific language governing permissions and limitations under the License.
 
 
 core:
    uid: ef15c1cc-2d1d-4fe6-b3c1-c9872ed1f221
-   name: "uvml_axil"
+   name: "uvma_spi"
    type: "verification-ip"
    aliases: null
-   full-name: "AXI-Lite UVM Agent"
+   full-name: "Serial Peripheral Interface (SPI) UVM Agent"
    version: "0.0.1"
    release-date: 2021-03-28
    description: >
